Update and clean up packages

--- a/package.json
+++ b/package.json
@@ -8,23 +8,38 @@
     "Node.js",
     "application",
     "openshift"
-  ],  
+  ],
   "author": {
     "name": "Katie Miller",
     "email": "katie@codemiller.com",
     "url": "http://www.codemiller.com/"
-  },  
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/codemiller/hubot-openshift"
-  },  
+  },
   "engines": {
     "node": ">= 0.8.x",
     "npm": ">= 1.1.x"
   },
   "dependencies": {
     "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot-business-cat": "^1.1.6",
+    "hubot-codinglove": "^0.1.3",
+    "hubot-darksky": "^1.0.1",
+    "hubot-devops-reactions": "^1.0.2",
+    "hubot-fliptable": "^1.2.0",
+    "hubot-github-repo-event-notifier": "^1.3.2",
+    "hubot-heroku-keepalive": "0.0.4",
+    "hubot-irc": "^0.1.27",
+    "hubot-motivate": "^3.0.0",
+    "hubot-plusplus": "^1.1.5",
+    "hubot-scripts": "^2.5.16",
+    "hubot-sentimental": "^1.0.4",
+    "moment": "^2.9.0",
+    "oauth": "^0.9.12",
+    "underscore": "^1.5.2",
+    "unirest": "^0.4.0"
   },
   "scripts": {
     "start": "PORT=$OPENSHIFT_NODEJS_PORT BIND_ADDRESS=$OPENSHIFT_NODEJS_IP HEROKU_URL=$OPENSHIFT_APP_DNS REDIS_URL=redis://:$REDIS_PASSWORD@$OPENSHIFT_REDIS_HOST:$OPENSHIFT_REDIS_PORT bin/hubot -n Hubot -a shell"
