--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hubot-github-repo-event-notifier": "^1.3.2",
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-irc": "^0.2.7",
+    "hubot-memes": "^1.0.0",
     "hubot-motivate": "^3.0.0",
     "hubot-plusplus": "^1.1.5",
     "hubot-scripts": "^2.5.16",
