--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "unirest": "^0.4.0"
   },
   "scripts": {
-    "start": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT bin/hubot -a irc -n waynebot"
+    "start": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=80 bin/hubot -a irc -n waynebot"
   }
 }
