--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "underscore": "^1.5.2",
     "unirest": "^0.4.0"
   },
-  "main": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=80 bin/hubot -a irc -n waynebot"
+  "main": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=80 bin/hubot -a irc -n waynebot",
   "scripts": {
     "start": "node REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=80 bin/hubot -a irc -n waynebot"
   }
