update starting parameters for openshift

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "underscore": "^1.8.3",
     "unirest": "^0.4.0"
   },
-  "main": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=80 bin/hubot -a irc -n waynebot",
+  "main": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=$OPENSHIFT_NODEJS_PORT BIND_ADDRESS=$OPENSHIFT_NODEJS_IP HEROKU_URL=$OPENSHIFT_APP_DNS bin/hubot -a irc -n waynebot",
   "scripts": {
-    "start": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=80 bin/hubot -a irc -n waynebot"
+    "start": "REDIS_URL=redis://:$REDISCLOUD_PASSWORD@$REDISCLOUD_HOSTNAME:$REDISCLOUD_PORT PORT=$OPENSHIFT_NODEJS_PORT BIND_ADDRESS=$OPENSHIFT_NODEJS_IP HEROKU_URL=$OPENSHIFT_APP_DNS bin/hubot -a irc -n waynebot"
   }
 }
